# airbyte

airbyte-integrations/connectors/destination-sftp-json/: pyproject.toml  setup.py
airbyte-integrations/connectors/destination-sftp-json/destination_sftp_json/: client.py  run.py
